Sif temp: to overwrite main with price_prediction branch

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,6 @@
-# DATABASE_URL=postgresql://neondb_owner:*************@ep-bold-bush-a1uwzypw-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require
-
 NEXT_PUBLIC_SUPABASE_URL=https://**************************.supabase.co
 NEXT_PUBLIC_SUPABASE_PUBLISHABLE_KEY=sb_publishable_-********************-*******************J
 NEXT_PUBLIC_SUPABASE_ANON_KEY=******************.***********************.******************
 SUPABASE_SERVICE_ROLE_KEY=sb_secret_XM8wei1pa-*****************
 DATABASE_URL=postgresql://postgres:*********.zdnhhkwxeimbjwoezirc.supabase.co:5432/postgres
-
-service_role secret = **********.***********************************************.***********-****
+INDIAN_GOVT_API_KEY=**********
