--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "bcryptjs": "^3.0.3",
     "lucide-react": "^0.563.0",
     "next": "16.1.6",
+    "next-pwa": "^5.6.0",
     "pg": "^8.18.0",
     "react": "19.2.3",
     "react-dom": "19.2.3"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/next-pwa": "^5.6.9",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
