--- a/public/manifest.json
+++ b/public/manifest.json
@@ -9,19 +9,44 @@
   "orientation": "portrait-primary",
   "icons": [
     {
-      "src": "/icon-192.png",
+      "src": "/icon-192.svg",
       "sizes": "192x192",
-      "type": "image/png",
+      "type": "image/svg+xml",
       "purpose": "maskable any"
     },
     {
-      "src": "/icon-512.png",
+      "src": "/icon-512.svg",
       "sizes": "512x512",
-      "type": "image/png",
+      "type": "image/svg+xml",
+      "purpose": "maskable any"
+    },
+    {
+      "src": "/icon.svg",
+      "sizes": "any",
+      "type": "image/svg+xml",
       "purpose": "maskable any"
     }
   ],
   "categories": ["business", "productivity", "shopping"],
   "lang": "en",
-  "dir": "ltr"
+  "dir": "ltr",
+  "scope": "/",
+  "id": "farmconnect-pwa",
+  "prefer_related_applications": false,
+  "shortcuts": [
+    {
+      "name": "Farmer Dashboard",
+      "short_name": "Farmer",
+      "description": "Access farmer dashboard",
+      "url": "/dashboard/farmer",
+      "icons": [{ "src": "/icon-192.svg", "sizes": "192x192" }]
+    },
+    {
+      "name": "Buyer Dashboard", 
+      "short_name": "Buyer",
+      "description": "Access buyer dashboard",
+      "url": "/dashboard/buyer",
+      "icons": [{ "src": "/icon-192.svg", "sizes": "192x192" }]
+    }
+  ]
 }
